<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/request_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/iv_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_bottom"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/driver"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/tv_phone"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:drawablePadding="10dp"
                android:drawableRight="@drawable/ic_phone"
                android:gravity="center|left"
                android:onClick="call"
                android:padding="10dp"
                android:text="@string/phone_number"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bt_reject"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:text="@string/reject"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_show"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/button_green"
            android:text="@string/show"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>